# Nuc_Engine

./: .gitattributes  .gitignore  CMakeLists.txt  NucEngine.code-workspace  NucEngine.sln  NucEngine.vcxproj  NucEngine.vcxproj.filters  README.md  TBP3D.sln  build_and_run.bat
Plugins/JoltPhysics/: JoltPhysicsPlugin.cpp  JoltPhysicsPlugin.h  PhysicsBodyComponent.cpp  PhysicsBodyComponent.h  PhysicsWorld.cpp  PhysicsWorld.h  README.md
TBP3D/: Camera.cpp  Camera.h  Controller.cpp  Controller.h  GameObject.cpp  GameObject.h  Lights.cpp  Lights.h  LoadShaders.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  MeshRenderer.h  ObjLoader.cpp  Source.cpp  TBP3D.vcxproj  TBP3D.vcxproj.filters  Texture.cpp  Time.cpp  Transform.cpp  Transform.h  UserInputs.cpp  Window.cpp  Window.h  math.h
TBP3D/gameObjects/Iron_Man/: Iron_Man.mtl
TBP3D/shaders/cubeShader/: cube.vert
TBP3D/x64/Debug/: vc141.idb
TBP3D/x64/Debug/TBP3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TBP3D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TBP3D/x64/Release/TBP3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TBP3D.lastbuildstate  TBP3D.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/shaders/cubeShader/: cube.frag
assets/shaders/ibl/: brdf.frag  cubemap.vert  irradiance.frag  prefilter.frag  sky.frag
assets/shaders/ironMan/: ironMan.frag  ironMan.vert
assets/shaders/pbr/: pbr.frag  pbr_model.vert  pbr_primitive.vert
assets/shaders/post/: fullscreen.vert  tonemap.frag
assets/shaders/primitive/: primitive.frag  primitive.vert
docs/: BUILD.md  COMPONENTS.md  EDITOR.md  PLUGINS.md  RESTRUCTURE.md  ROADMAP.md
docs/vault/: Home.md
docs/vault/.obsidian/: workspace.json
docs/vault/Architecture/: Application & Main Loop.md  Architecture Overview.md  Asset System.md  Components.md  GameObject & Hierarchy.md  Input.md  Plugin System.md  Rendering.md  Serialization & Reflection.md  World.md
docs/vault/Components/: CameraComponent.md  LightComponent.md  MaterialComponent.md  MeshComponent.md  PhysicsBodyComponent.md  RotatorComponent.md
docs/vault/Editor/: Controls & Keybindings.md  Editor Overview.md  Prefabs.md  Undo System.md
docs/vault/Guides/: Adding Meshes & Models.md  Adding a Component Type.md  Building the Engine.md  Scene File Format.md  Testing & Verification Gate.md  Writing a Plugin.md
docs/vault/Reference/: Roadmap Status.md  Source Map.md
src/engine/asset/: AssetManager.cpp  AssetManager.h
src/engine/core/: Application.cpp  Application.h  EngineMath.cpp  EngineMath.h  PhysicsService.h  Scene.h  ServiceRegistry.h  Time.cpp  Time.h  Window.cpp  Window.h
src/engine/editor/: Editor.cpp  Editor.h  EditorCommand.h  EditorFileSystem.cpp  EditorFileSystem.h  EditorHost.cpp  EditorHost.h  EditorMath.cpp  EditorMath.h  EditorTheme.cpp  EditorTheme.h  GamePackager.cpp  GamePackager.h  MeshPreview.cpp  MeshPreview.h  UndoStack.cpp  UndoStack.h
src/engine/editor/panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  DetailsPanel.cpp  DetailsPanel.h  LightsPanel.cpp  LightsPanel.h  MapsPanel.cpp  MapsPanel.h  OutlinerPanel.cpp  OutlinerPanel.h  StatsPanel.cpp  StatsPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/engine/input/: Controller.cpp  Controller.h  InputActions.cpp  InputActions.h  UserInputs.cpp  UserInputs.h
src/engine/io/: JsonSerialization.h  ModelDiscovery.cpp  ModelDiscovery.h  ObjLoader.cpp  ObjLoader.h  PrefabLibrary.cpp  PrefabLibrary.h  SceneSerializer.cpp  SceneSerializer.h
src/engine/platform/: WindowChrome.cpp  WindowChrome.h
src/engine/plugin/: Plugin.h  PluginManager.cpp  PluginManager.h  PluginSort.cpp  PluginSort.h
src/engine/render/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Framebuffer.cpp  Framebuffer.h  IblEnvironment.cpp  IblEnvironment.h  LightComponent.cpp  LightComponent.h  Lights.cpp  Lights.h  Material.cpp  Material.h  MaterialComponent.cpp  MaterialComponent.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshRenderer.cpp  MeshRenderer.h  PostProcess.cpp  PostProcess.h  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/engine/scene/: BehaviorContext.h  Component.h  ComponentRegistry.cpp  ComponentRegistry.h  FieldStore.h  GameObject.cpp  GameObject.h  RotatorComponent.cpp  RotatorComponent.h  Serialization.h  Transform.cpp  Transform.h  World.cpp  World.h
src/game/: AssetPaths.h  DemoScene.cpp  DemoScene.h  Main.cpp  Source.cpp
tools/lin_syntax_check/: check.sh  euler_test.cpp
tools/lin_syntax_check/stubs/: windows.h
tools/tests/: main.cpp  test_editor_command.cpp  test_input_actions.cpp  test_light_component.cpp  test_plugin_sort.cpp  test_primitives.cpp  test_service_registry.cpp  test_transform.cpp
x64/Debug/: TBP3D.ilk
x64/Release/: TBP3D.iobj  TBP3D.ipdb
